--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/background.jpg);
+    background-image: url(images/background5.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
