--- a/style.css
+++ b/style.css
@@ -79,6 +79,24 @@ nav ul li a:hover::after{
     text-shadow: 2px 4px 4px rgba(14,8,17,0.6);
 }
 
+.website-counter {
+    display: inline-block;
+    padding: 1rem 1rem;
+    vertical-align: middle;
+  }
+  
+  .flex-parent-element {
+    display: flex;
+    width: 50%;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
+  }
+  
+  .flex-child-element {
+    flex: 1;
+    margin: 0px;
+  }
+
 .header-text h1{
     margin-top: 20px;
     font-size: 60px;
@@ -387,7 +405,7 @@ nav .fa-solid{
 }
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(images/phone-background.png);
+        background-image: url(images/background3.jpg);
     }
     .header-text{
         margin-top: 100%;
